--- a/workspace-1/WebStudy/src/main/webapp/html_1day/ch_06(list).html
+++ b/workspace-1/WebStudy/src/main/webapp/html_1day/ch_06(list).html
@@ -69,14 +69,35 @@
 		<table>
 			<tr>
 				<td><label> 10초 남음 </label></td>
-				<td><progress value = "50" max = "60" /></td>
+				<td><progress value = "50" max = "60"></progress></td>
 			</tr>
 			
 			<tr>
 				<td><label> 진행률 30% </label></td>
-				<td><progress value = "30" max = "60" /></td>
+				<td><progress value = "30" max = "100"></progress></td>
 			</tr>
 			
+			<tr>
+				<td><label>점유율 0.7%</label></td>
+				<td><meter value="0.7"></meter></td>
+			</tr>
+			
+			<tr>
+				<td><label>점유율 65%</label></td>
+				<td><meter value="65" max = "100"></meter></td>
+			</tr>
+			
+			<tr>
+				<!-- 전체크기는 1024~10240이며, 현재값(value)이 높게 설정한 값(high)보다 더 크다. -->
+				<td><label>트래픽 초과 및 미달</label></td>
+				<td><meter min = 1024 max = 10240 optimum="1234" low = "2048" high="8192" value = "9151"></meter></td>
+			</tr>
+			
+			<tr>
+			<!-- 전체 1중에서 현재 0.5를 차지하고 있으며, 적정도를 0.8로 설정한 트래픽 -->
+				<td><label>적절한 트래픽</label></td>
+				<td><meter optimum="0.8" value="0.8"></meter></td>
+			</tr>
 		</table>
 	</fieldset>
 </form>
