--- a/workspace-1/WebStudy/src/main/webapp/html_3day/ch01(dadan_layout).html
+++ b/workspace-1/WebStudy/src/main/webapp/html_3day/ch01(dadan_layout).html
@@ -7,7 +7,37 @@
 	 적용 설명링크 : https://www.codingfactory.net/10561 -->
 <link href="https://fonts.googleapis.com/css?family=stylish&amp;subset=korean" rel = "stylesheet">
 <style type="text/css">
-
+/* 
+	1. 다단위치 지정
+	- break-before: 특정요소 앞
+	- break-after : 특정요소 위
+	- break-inside: 특정요소 안
+	
+	2. 동작
+	- 단 나눔 : column
+	- 단 나누지 않음 : avoid-column
+	
+	3. 단 갯수 지정
+	- column-count: 갯수
+ */
+ 
+ 	.multi{
+ 		font-family: 'Stylish', sans-serif;
+ 		break-after: column;				/* 다단 위치 지정 : 단 나누기 */
+ 		column-count: 3;					/* 단 개수 지정 */
+ 		column-gap: 30px;					/* 단과 단 사이의 여백 */
+ 		column-rule: 2px dotted blue;		/* 선 : 너비 | 스타일 | 속성 */
+ 		text-align: justify;				/* 글자 정렬 : 양족 정렬 */
+ 	}
+ 	
+ 	.no-col{
+ 		column-span: all;					/* 다단 합치기 */
+ 	}
+ 	
+ 	.left-img{
+ 		float: left;
+ 		margin-right: 15px;
+ 	}
 </style>	 
 </head>
 <body>
@@ -71,6 +101,19 @@
 	회생에 필요한 신경 신호를 전달하는 물질인 레시틴을 함유하고 있어 뇌 기능 증진에 도움이 되는 
 	음식입니다.
 	</p>
+	
+	<div class="no-col">
+	<h2>6. 해바라기 씨</h2>
+	<img src="../img/heba.jpg" width="200" height="200" class="left-img" />
+	<p>
+	해바라기씨는 중앙아메리카가 원산지로 알려져 있는데 콜럼버스가 아메리카 대륙을 발견한 후에 다른 
+	대륙으로 퍼져 나간 것으로 알려져 있습니다. 해바라기씨는 지방과 칼로리가 높아 과섭취는 체중 
+	증가를 유발하기 때문에 적정량을 섭취하는 것이 중요합니다. 해바라기씨는 꾸준히 섭취하면 콜레스테롤 
+	수치를 낮추는데 도움이 되며 스테롤 성분을 함유하고 있어 심장 건강에 좋다고 알려져 있습니다. 
+	또한 칼슘과, 엽산, 철분이 풍부하게 함유되어 있어 골다공증을 예방하고 면역력 강화, 빈혈 예방에도 
+	도움이 됩니다.
+	</p>
+	</div>
 </div>
 </body>
 </html>
