--- a/workspace-1/WebStudy/src/main/webapp/JQuery_1day/ch09(join_us).html
+++ b/workspace-1/WebStudy/src/main/webapp/JQuery_1day/ch09(join_us).html
@@ -6,13 +6,98 @@
 <script type="text/javascript" src = "../js/jquery-3.4.1.min.js"></script>
 <script type="text/javascript">
 	$(function(){
-		$("#join").onsubmit(function(){
+		$("#join").submit(function(){
 			if($("#result").length == 0){
 				$("#join").append("<div id = 'result'></div>");
 			}
 			
+			// 2. id가 입력안된 경우 "아이디를 입력하세요.!!" .. 결과확인
+			// $(input 요소).val() == document.폼명.태그명.value는 사용자가 입력한 값을 리턴한다.
+			if(!$("input[name = 'user_id']").val()){
+				$("#result").html("아이디를 입력하세요");
+				$("input[name = 'user_id']").focus();
+				return false;
+			}
 			
+			if(!$("input[name = 'user_pwd']").val()){
+				$("#result").html("패스워드를 입력하세요");
+				$(this).focus();
+				return false;
+			}
 			
+			if(!$("input[name = 'juminNum']").val()){
+				$("#result").html("주민번호를 입력하세요");
+				$(this).focus();
+				return false;
+			}
+			
+			if(!$("input[name = 'email']").val()){
+				$("#result").html("이메일을 입력하세요");
+				$(this).focus();
+				return false;
+			}
+			
+			if(!$("input[name = 'url']").val()){
+				$("#result").html("url을 입력하세요");
+				$(this).focus();
+				return false;
+			}
+			
+			if(!$("input[name = 'hpno']").val()){
+				$("#result").html("핸드폰 번호를 입력하세요");
+				$(this).focus();
+				return false;
+			}
+			
+			if(!$("input[name = 'gender']").is(":checked")){
+				$("#result").html("성별을 체크해주세요");
+				$("input[name = 'gender']:eq(0)").focus();
+				return false;
+			}
+			
+			if(!$("input[name = 'hobby']").is(":checked")){
+				$("#result").html("취미를 체크해주세요!!!");
+				$("input[name = 'hobby']:eq(0)").focus();
+				return false;
+			}
+			
+			if(!$("select[name = 'job']").val()){
+				$("#result").html("직업을 체크해주세요");
+				$(this).focus();
+				return false;
+			}
+			
+			// 3. 정상적으로 입력된 경우 변수에 담는다.
+			var userId = $("input[name = 'user_id']").val();
+			var userPwd = $("input[name = 'user_pwd']").val();
+			var userJumin = $("input[name = 'juminNum']").val();
+			var userEmail = $("input[name = 'email']").val();
+			var userGender = $("input[name = 'gender']:checked").val();
+			var userURL = $("input[name = 'url']").val();
+			var userHpno = $("input[name = 'hpno']").val();
+			// checkbox는 값이 여러개일 수도 있어서 val()을 써주지 않음
+			var userHobby = $("input[name = 'hobby']:checked");
+			var userJob = $("select[name = 'job']").val();
+			
+			// 추출된 값을 누적하여 저장할 문자열 변수
+			var hobby = "";
+			
+			// each() : userhobby의 개체수만큼 반복적으로 function()이 반복되어 실행됨
+			userHobby.each(function(){
+				if(hobby == ""){
+					hobby = $(this).val();
+				} else {
+					hobby += (", " + $(this).val());
+				}
+			});
+			
+			// 4. 정상적으로 입력된 경우 출력한다.
+			$("#result").html("아이디 : " + userId + "<br>패스워드 : "
+					+ userPwd + "<br>주민번호 : " + userJumin + "<br>이메일 : "
+					+ userEmail + "<br>성별 : " + userGender + "<br>직업 : "
+					+ userJob + "<br>취미 : " + hobby + "<br>url : "
+					+ userURL + "<br>핸드폰 : " + userHpno);
+			return false;
 		});
 	});
 </script>
