ChatProgram 이해완료 및 구현완료

--- a/workspace-1/WebStudy/src/main/webapp/HTML/html_2day/ch10(position_absolute).html
+++ b/workspace-1/WebStudy/src/main/webapp/HTML/html_2day/ch10(position_absolute).html
@@ -45,6 +45,11 @@
 #box5{	/* ¿ÞÂÊ 100 À§ 100 */
 	top:100px; left:100px;
 }
+
+#box6{	/* ¿ÞÂÊ 100 À§ 100 */
+	background: #cccccc;
+	padding : 20px;
+}
 </style>
 </head>
 <body>
@@ -56,5 +61,6 @@
 		<div class="box" id = "box4">box4</div>
 		<div class="box" id = "box5">box5</div>
 	</div>
+	<div class="box1" id = "box6">box5</div>
 </body>
 </html>
